--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-   <head/>
+   </head>
    <body>
       <h1>Hello world</h1>
-   <body/>
-<html/>
+   </body>
+</html>
