added index.js script

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
    <head>
       <title>Ersredna</title>
+      <script href="/scripts/index.js"></script>
    </head>
    <body>
       <h1>Hello World!</h1>
